--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './components/header';
 @import './components/logo';
 @import './components/contact';
+@import './components/mobile-menu';
 
 /*Main-section*/
 @import './components/hero';
