--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,21 @@
 }
 
 .container {
-  width: 1200px;
+  width: 480px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .container-head {
@@ -56,13 +66,18 @@
   margin: 0;
 }
 .header__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-left: 93px;
+  display: none;
+}
+@media (min-width: 768px) {
+  .header__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-left: 93px;
+  }
 }
 .header__link {
   margin: 0;
@@ -70,6 +85,11 @@
 }
 .header__link + .header__link {
   margin-left: 50px;
+}
+@media (min-width: 768px) {
+  .header__burger {
+    display: none;
+  }
 }
 
 .navi {
@@ -148,14 +168,19 @@
 }
 
 .contact {
-  margin: 0;
-  padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
-  list-style: none;
-  color: var(--text-color);
+  display: none;
+}
+@media (min-width: 768px) {
+  .contact {
+    margin: 0;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: auto;
+    list-style: none;
+    color: var(--text-color);
+  }
 }
 .contact__link {
   display: -webkit-box;
@@ -192,6 +217,68 @@
 .contact__link-active:hover, .contact__link-active:focus {
   color: var(--accent-color);
   fill: var(--accent-color);
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  max-width: 480px;
+  max-height: 796px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--white-color);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: -webkit-transform 500ms;
+  transition: -webkit-transform 500ms;
+  transition: transform 500ms;
+  transition: transform 500ms, -webkit-transform 500ms;
+}
+.mobile-menu.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+.mobile-menu__close {
+  position: absolute;
+}
+.mobile-menu__list {
+  list-style: none;
+}
+.mobile-menu__link {
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  margin: 0;
+  color: var(--title-color);
+}
+
+.menu-contact {
+  list-style: none;
+}
+.menu-contact__tel {
+  text-decoration: none;
+  color: var(--accent-color);
+}
+.menu-contact__email {
+  text-decoration: none;
+  color: var(--title-color);
+}
+
+.menu-socials {
+  list-style: none;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+.menu-socials__link {
+  color: var(--accent-color);
+  text-decoration: none;
+  border-right: 1px solid red;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 /*Main-section*/
@@ -263,12 +350,16 @@
 }
 
 .images-block {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
   margin-top: 0;
   margin-bottom: 0;
   list-style: none;
+}
+@media (min-width: 768px) {
+  .images-block {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
 }
 .images-block__icon-block {
   display: -webkit-box;
@@ -306,6 +397,11 @@
   text-transform: uppercase;
   letter-spacing: 0.03em;
 }
+@media (max-width: 768px) {
+  .images-block__heading {
+    text-align: center;
+  }
+}
 .images-block__text {
   margin-top: 0;
   margin-bottom: 0;
@@ -316,6 +412,11 @@
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+}
+@media (max-width: 768px) {
+  .images-block__text {
+    text-align: justify;
+  }
 }
 
 .features {
@@ -389,6 +490,11 @@
 
 .activity {
   padding-bottom: 94px;
+}
+@media (max-width: 768px) {
+  .activity {
+    display: none;
+  }
 }
 .activity:nth-child(3n) {
   margin-right: 0;
@@ -468,11 +574,15 @@
   letter-spacing: 0.03em;
 }
 .comand__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   list-style: none;
   padding-left: 0;
+}
+@media (min-width: 768px) {
+  .comand__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 .comand__photos-block {
   display: block;
@@ -490,6 +600,11 @@
 }
 .comand__photos-block:nth-last-child(-n+1) {
   margin-right: 0;
+}
+@media (max-width: 768px) {
+  .comand__photos-block {
+    margin-bottom: 10px;
+  }
 }
 
 .comand-block {
@@ -576,9 +691,6 @@
   margin-top: 50px;
   margin-bottom: 0;
   padding-left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -587,7 +699,17 @@
           justify-content: center;
   gap: 30px;
 }
+@media (min-width: 768px) {
+  .client__section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 
+.client-box {
+  padding-bottom: 20px;
+}
 .client-box__list {
   list-style: none;
   border: 1px solid var(--second-color);
