--- a/sass/components/_client-company.scss
+++ b/sass/components/_client-company.scss
@@ -20,15 +20,21 @@
     margin-top: 50px;
     margin-bottom: 0;
     padding-left: 0;
-    display: flex;
+    // display: flex;
     align-items: center;
     justify-content: center;
     gap: 30px;
-  }
+
+    @media(min-width: 768px){
+      display: flex;
+    }
+     }
 }
 
 
 .client-box {
+  padding-bottom: 20px;
+
   &__list {
     list-style: none;
     border: 1px solid var(--second-color);
