--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,10 +1,15 @@
 .contact {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  margin-left: auto;
-  list-style: none;
-  color: var(--text-color);
+  display: none;
+
+  @media (min-width: 768px){
+    margin: 0;
+    padding: 0;
+    display: flex;
+    margin-left: auto;
+    list-style: none;
+    color: var(--text-color);
+    
+  }
 
   &__link {
     display: flex;
