--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -18,10 +18,13 @@
 }
 
 .images-block {
-  display: inline-flex;
   margin-top: 0;
   margin-bottom: 0;
   list-style: none;
+
+  @media (min-width: 768px){
+    display: inline-flex;
+  }
 
   &__icon-block {
     display: flex;
@@ -54,6 +57,10 @@
     line-height: 1.14;
     text-transform: uppercase;
     letter-spacing: 0.03em;
+
+    @media (max-width: 768px){
+      text-align: center;
+    }
   }
 
   &__text {
@@ -66,6 +73,10 @@
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+
+    @media (max-width: 768px){
+      text-align:justify;
+    }
   }
   
 }
