--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -11,11 +11,15 @@
   }
 
   &__list {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-left: 93px;
+    display: none;
+
+    @media (min-width: 768px){
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      margin-left: 93px;
+    }
   }
 
   &__link {
@@ -25,6 +29,12 @@
 
   &__link + &__link {
     margin-left: 50px;
+  }
+
+  &__burger{
+    @media (min-width: 768px){
+      display: none;
+    }
   }
 }
 
