--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,13 +1,26 @@
 .container {
-    width: 1200px;
+    width: 480px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
+
+    @media (min-width: 768px){
+      width: 768px;
+    }
+
+    @media (min-width: 1200px){
+      width: 1200px;
+    }
   }
   
-
   .container-head {
     display: flex;
     align-items: center;
   }
+
+  // .container-mobile{
+  //   width: 480px;
+  //   padding-left: 15px;
+  //   padding-right: 15px;
+  // }
