--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
 }
 
 .container {
-  width: 480px;
+  max-width: 480px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -85,6 +85,10 @@
 }
 .header__link + .header__link {
   margin-left: 50px;
+}
+.header__burger {
+  border: none;
+  background-color: transparent;
 }
 @media (min-width: 768px) {
   .header__burger {
@@ -241,33 +245,66 @@
 }
 .mobile-menu__close {
   position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  border: none;
+}
+.mobile-menu__close:hover {
+  fill: var(--accent-color);
+}
+.mobile-menu__item {
+  margin-bottom: 32px;
+}
+.mobile-menu__item-navi {
+  margin-bottom: 32px;
+  color: var(--accent-color);
+  cursor: pointer;
 }
 .mobile-menu__list {
+  margin: 0;
   list-style: none;
+  margin-top: 48px;
 }
 .mobile-menu__link {
+  text-decoration: none;
   font-family: Roboto;
   font-size: 40px;
   font-weight: 700;
   line-height: 1.17;
   letter-spacing: 0.02em;
-  margin: 0;
   color: var(--title-color);
 }
 
 .menu-contact {
+  margin-top: 306px;
   list-style: none;
 }
+.menu-contact__item {
+  margin-bottom: 32px;
+}
 .menu-contact__tel {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
   text-decoration: none;
   color: var(--accent-color);
+  margin-bottom: 32px;
+  letter-spacing: 0.02em;
 }
 .menu-contact__email {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
   text-decoration: none;
-  color: var(--title-color);
+  color: var(--text-color);
 }
 
 .menu-socials {
+  margin-top: 64px;
   list-style: none;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -276,7 +313,7 @@
 .menu-socials__link {
   color: var(--accent-color);
   text-decoration: none;
-  border-right: 1px solid red;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
   padding-right: 10px;
   padding-left: 10px;
 }
@@ -303,10 +340,16 @@
   color: var(--white-color);
   font-family: Roboto, sans-serif;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.6;
   text-transform: uppercase;
   letter-spacing: 0.06em;
+}
+@media (min-width: 1200px) {
+  .section__headline {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 .section__button-active {
   min-width: 200px;
@@ -568,10 +611,16 @@
   margin-bottom: 50px;
   color: var(--title-color);
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: Center;
   letter-spacing: 0.03em;
+}
+@media (min-width: 1200px) {
+  .comand__title {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 .comand__list {
   list-style: none;
@@ -679,9 +728,16 @@
 .client__title {
   margin: 0;
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
+  line-height: 1.17;
   font-weight: 700;
   letter-spacing: 0.03em;
+}
+@media (min-width: 1200px) {
+  .client__title {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 .client :hover, .client :focus {
   fill: var(--accent-color);
@@ -852,9 +908,6 @@
   background-color: var(--background-color-black);
 }
 .footer__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
