--- a/sass/components/_client-company.scss
+++ b/sass/components/_client-company.scss
@@ -5,9 +5,15 @@
   &__title {
     margin: 0;
     text-align: center;
-    font-size: 36px;
+    font-size: 28px;
+    line-height: 1.17;
     font-weight: 700;
     letter-spacing: 0.03em;
+
+    @media (min-width: 1200px){
+      font-size: 36px;
+      line-height: 1.16;
+    }
   }
 
   & :hover,
