--- a/sass/components/_comand.scss
+++ b/sass/components/_comand.scss
@@ -8,10 +8,15 @@
     margin-bottom: 50px;
     color: var(--title-color);
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
+    font-size: 28px;
+    line-height: 1.17;
     text-align: Center;
     letter-spacing: 0.03em;
+
+    @media (min-width: 1200px){
+    font-size: 36px;
+    line-height: 1.16;
+    }
   }
 
   &__list {
