--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,7 +4,7 @@
   background-color: var(--background-color-black);
 
   &__content {
-    display: flex;
+    // display: flex;
     align-items: baseline;
   }
 }
