--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -23,10 +23,16 @@
     color: var(--white-color);
     font-family: Roboto, sans-serif;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.6;
     text-transform: uppercase;
     letter-spacing: 0.06em;
+
+    @media (min-width:1200px){
+      font-size: 44px;
+      line-height: 1.36;
+
+    }
   }
 
   &__button-active {
