--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -16,52 +16,84 @@
 
   &__close {
     position: absolute;
-    // top: 20px;
-    // right: 20px;
+    top: 10px;
+    right: 15px;
+    background-color: transparent;
+    border: none;
+
+    &:hover{
+      fill: var(--accent-color);
+    }
+  }
+
+  &__item{
+    margin-bottom: 32px;
+  
+  }
+
+  &__item-navi{
+    margin-bottom: 32px;
+    color: var(--accent-color);
+    cursor: pointer;
   }
 
   &__list {
+    margin: 0;
     list-style: none;
+    margin-top: 48px;
   }
 
   &__link {
+    text-decoration: none;
     font-family: Roboto;
     font-size: 40px;
     font-weight: 700;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    margin: 0;
     color: var(--title-color);
   }
 }
 
 .menu-contact {
-    list-style: none;
+  margin-top: 306px;
+  list-style: none;
 
-    &__tel{
-        text-decoration: none;
-        color: var(--accent-color);
-    }
+  &__item {
+    margin-bottom: 32px;
+  }
 
-    &__email{
-        text-decoration: none;
-        color: var(--title-color);
+  &__tel {
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    text-decoration: none;
+    color: var(--accent-color);
+    margin-bottom: 32px;
+    letter-spacing: 0.02em;
+  }
 
-    }
- 
+  &__email {
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--text-color);
+  }
 }
 
-.menu-socials{
-    list-style: none;
-    display: inline-flex;
+.menu-socials {
+  margin-top: 64px;
+  list-style: none;
+  display: inline-flex;
 
-    &__link{
-        color: var(--accent-color);
-        text-decoration: none;
-        border-right: 1px solid red;
-        padding-right: 10px;
-        padding-left: 10px;
-
-
-    }
+  &__link {
+    color: var(--accent-color);
+    text-decoration: none;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    padding-right: 10px;
+    padding-left: 10px;
+  }
 }
