--- a/css/main.css
+++ b/css/main.css
@@ -313,6 +313,10 @@
 .menu-socials__link {
   color: var(--accent-color);
   text-decoration: none;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
   padding-right: 10px;
   padding-left: 10px;
@@ -625,6 +629,7 @@
 .comand__list {
   list-style: none;
   padding-left: 0;
+  margin-bottom: 20px;
 }
 @media (min-width: 768px) {
   .comand__list {
@@ -635,7 +640,7 @@
 }
 .comand__photos-block {
   display: block;
-  width: 270px;
+  width: 100%;
   background-color: var(--white-color);
   margin-right: 30px;
   margin-bottom: 0;
@@ -647,11 +652,11 @@
   -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1215686275);
           box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1215686275);
 }
-.comand__photos-block:nth-last-child(-n+1) {
-  margin-right: 0;
-}
-@media (max-width: 768px) {
-  .comand__photos-block {
+@media (min-width: 768px) {
+  .comand {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin-bottom: 10px;
   }
 }
@@ -747,6 +752,11 @@
   margin-top: 50px;
   margin-bottom: 0;
   padding-left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
