--- a/sass/components/_client-company.scss
+++ b/sass/components/_client-company.scss
@@ -26,7 +26,8 @@
     margin-top: 50px;
     margin-bottom: 0;
     padding-left: 0;
-    // display: flex;
+    display: flex;
+    flex-wrap: wrap;    
     align-items: center;
     justify-content: center;
     gap: 30px;
