--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -92,6 +92,10 @@
   &__link {
     color: var(--accent-color);
     text-decoration: none;
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.2;
     border-right: 1px solid rgba(33, 33, 33, 0.2);
     padding-right: 10px;
     padding-left: 10px;
