--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,15 @@
 }
 
 .container {
-  max-width: 480px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 @media (min-width: 768px) {
   .container {
@@ -44,9 +48,15 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container-mobile {
+  width: 480px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /*Header*/
@@ -87,13 +97,13 @@
   margin-left: 50px;
 }
 .header__burger {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  top: 10px;
+  right: 20px;
   border: none;
   background-color: transparent;
-}
-@media (min-width: 768px) {
-  .header__burger {
-    display: none;
-  }
 }
 
 .navi {
@@ -643,14 +653,10 @@
   width: 100%;
   background-color: var(--white-color);
   margin-right: 30px;
-  margin-bottom: 0;
   padding-left: 0;
-  -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.1411764706);
-          box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.1411764706);
-  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1215686275);
-          box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1215686275);
+  margin-bottom: 30px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 @media (min-width: 768px) {
   .comand {
@@ -922,16 +928,20 @@
       -ms-flex-align: baseline;
           align-items: baseline;
 }
-
 .footer-navi {
-  margin-right: 93px;
+  display: inline;
+}
+@media (min-width: 1200px) {
+  .footer-navi {
+    margin-right: 93px;
+  }
 }
 .footer-navi__logo {
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   text-decoration: none;
   letter-spacing: 0.03em;
 }
@@ -993,6 +1003,7 @@
   font-weight: 700;
   letter-spacing: 0.03em;
   color: var(--white-color);
+  margin-top: 60px;
 }
 
 .socials {
@@ -1030,11 +1041,6 @@
   background-color: var(--accent-color);
 }
 
-.form-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
 .form-footer__icon {
   fill: var(--white-color);
   margin-left: 10px;
@@ -1043,6 +1049,7 @@
   margin-right: 12px;
   padding: 15px 0 15px 16px;
   width: 358px;
+  width: 100%;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -1080,10 +1087,6 @@
 }
 .form-footer__button:hover, .form-footer__button:focus {
   background-color: #188ce8;
-}
-
-.footer-input {
-  margin-left: 93px;
 }
 
 .footer-title {
