--- a/sass/components/_comand.scss
+++ b/sass/components/_comand.scss
@@ -37,11 +37,12 @@
     width: 100%;
     background-color: var(--white-color);
     margin-right: 30px;
-    margin-bottom: 0;
+    // margin-bottom: 0;
     padding-left: 0;
-    box-shadow: 0px 2px 1px 0px #00000033;
-    box-shadow: 0px 1px 1px 0px #00000024;
-    box-shadow: 0px 1px 3px 0px #0000001f;  
+    margin-bottom: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+    0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
     }
 
     @media (min-width: 768px){
