--- a/sass/components/_footer-input.scss
+++ b/sass/components/_footer-input.scss
@@ -1,5 +1,5 @@
 .form-footer {
-  display: flex;
+  // display: flex;
 
   &__icon {
     fill: var(--white-color);
@@ -10,6 +10,7 @@
     margin-right: 12px;
     padding: 15px 0 15px 16px;
     width: 358px;
+    width: 100%;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
@@ -51,9 +52,9 @@
   }
 }
 
-.footer-input {
-  margin-left: 93px;
-}
+// .footer-input {
+//   // margin-left: 93px;
+// }
 
 .footer-title {
   color: var(--white-color);
