--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,22 +4,38 @@
   background-color: var(--background-color-black);
 
   &__content {
+    // margin-left: 100px;
     // display: flex;
     align-items: baseline;
+
+    @media (min-width: 1200px){
+      // display: flex;
+    }
   }
 }
 
 .footer-navi {
-  margin-right: 93px;
+  display: inline;
+
+  @media (min-width: 1200px){
+    margin-right: 93px;
+  }
 
   &__logo {
     color: var(--accent-color);
     font-family: Raleway, sans-serif;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.16;
     text-decoration: none;
     letter-spacing: 0.03em;
+    // color: var(--accent-color);
+    // font-family: Raleway, sans-serif;
+    // font-weight: 700;
+    // font-size: 26px;
+    // line-height: 1.19;
+    // text-decoration: none;
+    // letter-spacing: 0.03em;
   }
 
   &__logo-white {
