--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,14 +1,15 @@
 .container {
-    max-width: 480px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
 
+    @media (min-width:480px){
+      width: 480px;
+    }
     @media (min-width: 768px){
       width: 768px;
     }
-
     @media (min-width: 1200px){
       width: 1200px;
     }
@@ -16,11 +17,12 @@
   
   .container-head {
     display: flex;
-    align-items: center;
+    // align-items: center;
+    justify-content: space-between;
   }
 
-  // .container-mobile{
-  //   width: 480px;
-  //   padding-left: 15px;
-  //   padding-right: 15px;
-  // }
+  .container-mobile{
+    width: 480px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
