--- a/sass/components/_footer-input.scss
+++ b/sass/components/_footer-input.scss
@@ -1,4 +1,18 @@
+.footer-input{
+  @media (min-width: 480px){
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+}
 .form-footer {
+  @media (min-width: 480px){
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
   // display: flex;
 
   &__icon {
@@ -7,9 +21,10 @@
   }
 
   &__input {
-    margin-right: 12px;
+    margin-bottom: 20px;
+    // margin-right: 12px;
     padding: 15px 0 15px 16px;
-    width: 358px;
+    width: 450px;
     width: 100%;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
