--- a/sass/components/_footer-socials.scss
+++ b/sass/components/_footer-socials.scss
@@ -1,7 +1,16 @@
+.footer-socials{
+  
+  @media (min-width: 480px){
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+}
+  
+}
 .footer-title {
   color: var(--white-color);
   text-transform: uppercase;
-  margin: 0;
   margin-bottom: 20px;
   font-size: 14px;
   font-weight: 700;
