--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -21,9 +21,12 @@
   margin-top: 0;
   margin-bottom: 0;
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   @media (min-width: 768px){
-    display: inline-flex;
   }
 
   &__icon-block {
@@ -35,6 +38,10 @@
     height: 120px;
     margin-bottom: 30px;
     background-color: var(--color-button);
+
+    @media (min-width:768px){
+      width: 100%;
+    }
   }
   
   &__icon {
@@ -42,7 +49,13 @@
     flex-wrap: wrap;
     display: inline-block;
     width: 270px;
+    margin: 0;
 
+
+    @media (min-width:768px){
+      display: block;
+      width: 354px;
+    }
     &:nth-last-child(-n + 1) {
       margin-right: 0;
     }
