--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -15,7 +15,8 @@
 }
 
 .footer-navi {
-  @media (min-width: 480px) {
+  @media (min-width: 480px){
+    flex-direction: column;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,9 +71,18 @@
 }
 
 .footer-contact {
-  margin-top: 28px;
+  @media (min-width: 480px){
+    margin-top: 28px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 
   &__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-top: 0;
     margin-bottom: 0;
     list-style: none;
