--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -17,7 +17,7 @@
   
   .container-head {
     display: flex;
-    // align-items: center;
+    align-items: center;
     justify-content: space-between;
   }
 
