--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -655,16 +658,12 @@
   }
 }
 .comand__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   list-style: none;
   padding-left: 0;
   margin-bottom: 20px;
-}
-@media (min-width: 768px) {
-  .comand__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
 }
 .comand__photos-block {
   display: block;
@@ -678,10 +677,8 @@
 }
 @media (min-width: 768px) {
   .comand {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 10px;
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
   }
 }
 
