--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin: 10px auto;
 }
 
 .container-mobile {
@@ -64,10 +65,15 @@
 
 /*Header*/
 .header {
-  height: 80px;
+  height: 60px;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: var(--border-color);
+}
+@media (min-width: 768px) {
+  .header {
+    height: 80px;
+  }
 }
 .header__navi {
   display: -webkit-box;
@@ -129,7 +135,15 @@
 
 .active {
   text-decoration: none;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .navi-active {
@@ -391,9 +405,15 @@
 }
 
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--white-color);
+}
+@media (min-width: 1200px) {
+  .features {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .features__title {
   position: absolute;
@@ -410,22 +430,13 @@
 }
 
 .images-block {
-  margin-top: 0;
-  margin-bottom: 0;
+  gap: 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 .images-block__icon-block {
   display: -webkit-box;
@@ -437,29 +448,18 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0;
-  width: 270px;
   height: 120px;
   margin-bottom: 30px;
   background-color: var(--color-button);
 }
-@media (min-width: 768px) {
-  .images-block__icon-block {
-    width: 100%;
-  }
-}
 .images-block__icon {
-  margin-right: 30px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  display: inline-block;
-  width: 270px;
   margin: 0;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .images-block__icon {
-    display: block;
-    width: 354px;
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
   }
 }
 .images-block__icon:nth-last-child(-n+1) {
@@ -483,17 +483,19 @@
 .images-block__text {
   margin-top: 0;
   margin-bottom: 0;
-  width: 270px;
+  width: auto;
   margin-right: 30px;
   color: var(--text-color);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+  text-align: justify;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .images-block__text {
-    text-align: justify;
+    margin-right: 0;
+    width: auto;
   }
 }
 
@@ -569,7 +571,7 @@
 .activity {
   padding-bottom: 94px;
 }
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   .activity {
     display: none;
   }
@@ -658,27 +660,44 @@
   }
 }
 .comand__list {
+  list-style: none;
+  padding-left: 0;
+  gap: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  list-style: none;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-left: 0;
-  margin-bottom: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .comand__photos-block {
   display: block;
-  width: 100%;
   background-color: var(--white-color);
-  margin-right: 30px;
+  margin-bottom: 0;
   padding-left: 0;
-  margin-bottom: 30px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 @media (min-width: 768px) {
   .comand {
+    display: block;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -ms-flex-preferred-size: calc((100% - 30px) / 2);
         flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media (min-width: 1200px) {
+  .comand {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    gap: 30px;
   }
 }
 
@@ -943,6 +962,14 @@
       -ms-flex-align: baseline;
           align-items: baseline;
 }
+@media (min-width: 1200px) {
+  .footer__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 @media (min-width: 480px) {
   .footer-navi {
     -webkit-box-orient: vertical;
@@ -972,20 +999,13 @@
   }
 }
 .footer-navi__logo {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
   text-decoration: none;
   letter-spacing: 0.03em;
-}
-@media (min-width: 480px) {
-  .footer-navi__logo {
-    font-size: 24px;
-    line-height: 1.16;
-  }
 }
 @media (min-width: 768px) {
   .footer-navi__logo {
