--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,7 +1,12 @@
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--white-color);
+
+  @media(min-width:1200px){
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &__title {
     position: absolute;
@@ -18,44 +23,29 @@
 }
 
 .images-block {
-  margin-top: 0;
-  margin-bottom: 0;
+  gap: 30px;
+  flex-wrap: wrap;
   list-style: none;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  @media (min-width: 768px){
-  }
-
+ 
   &__icon-block {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0;
-    width: 270px;
     height: 120px;
     margin-bottom: 30px;
     background-color: var(--color-button);
-
-    @media (min-width:768px){
-      width: 100%;
-    }
   }
   
   &__icon {
-    margin-right: 30px;
-    flex-wrap: wrap;
-    display: inline-block;
-    width: 270px;
     margin: 0;
-
+    width: 100%;
 
     @media (min-width:768px){
-      display: block;
-      width: 354px;
+      flex-basis: calc((100% - 30px) / 2);
     }
+
+
     &:nth-last-child(-n + 1) {
       margin-right: 0;
     }
@@ -79,19 +69,23 @@
   &__text {
     margin-top: 0;
     margin-bottom: 0;
-    width: 270px;
+    width: auto;
     margin-right: 30px;
     color: var(--text-color);
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+    text-align:justify;
 
-    @media (max-width: 768px){
-      text-align:justify;
+    @media (min-width:768px){
+      margin-right: 0;
+      width: auto;
     }
   }
+
   
+
 }
 
 
