--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,8 +1,13 @@
 .header{
-  height: 80px;
+  height: 60px;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: var(--border-color);
+
+  @media (min-width:768px){
+    height: 80px;
+
+  }
 
   &__navi {
     display: flex;
@@ -66,7 +71,9 @@
 
 .active {
   text-decoration: none;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navi-active {
