--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -19,6 +19,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 10px auto;
   }
 
   .container-mobile{
