Редагує секцію header

--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -20,6 +20,10 @@
     align-items: center;
     justify-content: space-between;
     margin: 10px auto;
+
+    @media (min-width:768px){
+      margin: 0 auto;
+    }
   }
 
   .container-mobile{
