--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,11 @@
           justify-content: space-between;
   margin: 10px auto;
 }
+@media (min-width: 768px) {
+  .container-head {
+    margin: 0 auto;
+  }
+}
 
 .container-mobile {
   width: 480px;
@@ -113,6 +118,11 @@
   right: 20px;
   border: none;
   background-color: transparent;
+}
+@media (min-width: 768px) {
+  .header__burger {
+    display: none;
+  }
 }
 
 .navi {
@@ -200,6 +210,7 @@
 
 .contact {
   display: none;
+  color: var(--text-color);
 }
 @media (min-width: 768px) {
   .contact {
@@ -210,7 +221,10 @@
     display: flex;
     margin-left: auto;
     list-style: none;
-    color: var(--text-color);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 .contact__link {
@@ -220,6 +234,12 @@
 }
 .contact__link + .contact__link {
   margin-left: 40px;
+}
+@media (min-width: 768px) {
+  .contact__link + .contact__link {
+    margin: 0;
+    margin-top: 10px;
+  }
 }
 .contact:hover, .contact:focus {
   color: var(--accent-color);
@@ -244,6 +264,12 @@
   fill: var(--text-color);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (min-width: 768px) {
+  .contact__link-active {
+    padding: 0;
+    gap: 10px;
+  }
 }
 .contact__link-active:hover, .contact__link-active:focus {
   color: var(--accent-color);
@@ -1026,21 +1052,26 @@
   text-decoration: none;
   letter-spacing: 0.03em;
 }
-
-@media (min-width: 480px) {
-  .footer-contact {
-    margin-top: 28px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+@media (min-width: 768px) {
+  .footer-navi__logo-white {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
   }
+}
+
+.footer-contact {
+  margin-top: 28px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .footer-contact__list {
   display: -webkit-box;
@@ -1091,20 +1122,18 @@
   text-decoration: none;
 }
 
-@media (min-width: 480px) {
-  .footer-socials {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-top: 60px;
-  }
+.footer-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 60px;
 }
 
 .footer-title {
@@ -1153,20 +1182,18 @@
   background-color: var(--accent-color);
 }
 
-@media (min-width: 480px) {
-  .footer-input {
-    margin-top: 60px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+.footer-input {
+  margin-top: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media (min-width: 480px) {
@@ -1206,9 +1233,9 @@
   border-color: var(--accent-color);
 }
 .form-footer__button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   padding: 10px 28px;
   width: 200px;
   height: 50px;
