--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,14 +1,14 @@
 .contact {
   display: none;
+  color: var(--text-color);
 
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     margin: 0;
     padding: 0;
     display: flex;
     margin-left: auto;
     list-style: none;
-    color: var(--text-color);
-    
+    flex-direction: column;
   }
 
   &__link {
@@ -17,6 +17,11 @@
 
   &__link + &__link {
     margin-left: 40px;
+
+    @media (min-width: 768px) {
+      margin: 0;
+      margin-top: 10px;
+    }
   }
 
   &:hover,
@@ -40,6 +45,11 @@
     fill: var(--text-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media (min-width: 768px) {
+      padding: 0;
+      gap: 10px;
+    }
 
     &:hover,
     &:focus {
