--- a/sass/components/_footer-input.scss
+++ b/sass/components/_footer-input.scss
@@ -1,11 +1,10 @@
 .footer-input{
-  @media (min-width: 480px){
   margin-top: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-}
+
 .form-footer {
   @media (min-width: 480px){
   width: 450px;
@@ -22,7 +21,6 @@
 
   &__input {
     margin-bottom: 20px;
-    // margin-right: 12px;
     padding: 15px 0 15px 16px;
     width: 450px;
     width: 100%;
@@ -41,7 +39,7 @@
   }
 
   &__button {
-    display: inline-flex;
+    display: flex;
     padding: 10px 28px;
     width: 200px;
     height: 50px;
