--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,14 +4,11 @@
   background-color: var(--background-color-black);
 
   &__content {
-    // margin-left: 100px;
-    // display: flex;
     align-items: baseline;
 
-    @media (min-width:768px){
-
+    @media (min-width: 768px) {
     }
-  
+
     @media (min-width: 1200px) {
       display: flex;
     }
@@ -19,7 +16,7 @@
 }
 
 .footer-navi {
-  @media (min-width: 480px){
+  @media (min-width: 480px) {
     flex-direction: column;
     display: flex;
     flex-direction: column;
@@ -36,8 +33,6 @@
   }
 
   &__logo {
-    // justify-content: center;
-    // align-items:center ;
     color: var(--accent-color);
     font-family: Raleway, sans-serif;
     font-weight: 700;
@@ -62,23 +57,20 @@
     text-align: left;
     text-decoration: none;
     letter-spacing: 0.03em;
-    // color: var(--white-color);
-    // font-family: Raleway, sans-serif;
-    // font-weight: 700;
-    // font-size: 26px;
-    // line-height: 1.19;
-    // text-align: left;
-    // text-decoration: none;
+
+    @media (min-width: 768px) {
+      font-weight: 700;
+      font-size: 26px;
+      line-height: 1.19;
+    }
   }
 }
 
 .footer-contact {
-  @media (min-width: 480px){
-    margin-top: 28px;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
+  margin-top: 28px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
   &__list {
     display: flex;
