--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -37,16 +37,15 @@
   }
 
   &__burger{
-    // display: flex;
     justify-content: space-between;
     top:10px;
     right: 20px;
     border: none;
     background-color: transparent;
 
-    // @media (min-width: 768px){
-    //   display: none;
-    // }
+    @media (min-width: 768px){
+      display: none;
+    }
   }
 }
 
