--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -3,7 +3,7 @@
   padding-bottom: 60px;
   background-color: var(--white-color);
 
-  @media(min-width:1200px){
+  @media (min-width:1200px){
     padding-top: 94px;
     padding-bottom: 94px;
   }
@@ -23,6 +23,7 @@
 }
 
 .images-block {
+  margin: 0;
   gap: 30px;
   flex-wrap: wrap;
   list-style: none;
