--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -11,6 +11,13 @@
     flex-direction: column;
   }
 
+  @media (min-width:1200px){
+    align-items: baseline;
+    display: flex;
+    
+  }
+
+
   &__link {
     display: flex;
   }
