--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -28,6 +28,10 @@
   flex-wrap: wrap;
   list-style: none;
   display: flex;
+
+  @media (min-width:1200px){
+    flex-wrap: nowrap;
+  }
  
   &__icon-block {
     display: flex;
