--- a/sass/components/_footer-input.scss
+++ b/sass/components/_footer-input.scss
@@ -6,6 +6,7 @@
 
   @media (min-width:1200px){
     display: inline-flex;
+    align-items: flex-start;
   }
 }
 
@@ -19,7 +20,7 @@
 
   @media (min-width:1200px){
     flex-direction: row;
-    align-items:center ;
+    align-items: baseline;
   }
 
   &__icon {
@@ -30,7 +31,6 @@
   &__input {
     margin-bottom: 20px;
     padding: 15px 0 15px 16px;
-    width: 450px;
     width: 100%;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -41,8 +41,10 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     @media (min-width:1200px){
-      width: 358px;
+      max-width: 358px;
+      margin-right: 12px;
     }
+
     &:hover,
     &:focus {
       border-color: var(--accent-color);
