--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -16,6 +16,7 @@
       display: flex;
       flex-wrap: wrap;
       align-items: baseline;
+      justify-content: space-around;
     }
   }
 }
@@ -34,10 +35,9 @@
   }
 
   @media (min-width: 1200px) {
-    // display: block;
     justify-content: space-between;
     align-items: flex-start;
-    margin-right: 93px;
+    margin-right: 70px;
 
   }
 
@@ -90,6 +90,10 @@
     margin-bottom: 0;
     list-style: none;
     padding-left: 0;
+
+    @media (min-width:1200px){
+      align-items: flex-start;
+    }
   }
 
   &__list > li {
