--- a/sass/components/_footer-input.scss
+++ b/sass/components/_footer-input.scss
@@ -41,7 +41,7 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     @media (min-width:1200px){
-      max-width: 358px;
+      min-width: 358px;
       margin-right: 12px;
     }
 
