--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -16,7 +16,7 @@
       display: flex;
       flex-wrap: wrap;
       align-items: baseline;
-      justify-content: space-around;
+      justify-content: space-between;
     }
   }
 }
