--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,6 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 10px auto;
 }
 @media (min-width: 768px) {
   .container-head {
@@ -352,6 +351,10 @@
   color: var(--title-color);
 }
 
+.mobile-active {
+  color: var(--accent-color);
+}
+
 .menu-contact {
   margin-top: 306px;
   list-style: none;
@@ -398,7 +401,7 @@
   padding-left: 10px;
 }
 .menu-socials__link:last-child {
-  border-right: none;
+  border: none;
 }
 
 /*Main-section*/
@@ -428,28 +431,28 @@
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mobile@2x.jpg);
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 481px) {
   .section {
     background-size: cover;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-tablet.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-tablet.jpg);
   }
 }
-@media (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 192dpi), (min-width: 768px) and (min-resolution: 2dppx) {
+@media (min-width: 481px) and (min-device-pixel-ratio: 2), (min-width: 481px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 481px) and (min-resolution: 192dpi), (min-width: 481px) and (min-resolution: 2dppx) {
   .section {
     background-size: cover;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-tablet@2x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-tablet@2x.jpg);
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 769px) {
   .section {
     background-size: cover;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-desktop.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-desktop.jpg);
   }
 }
-@media (min-width: 1200px) and (min-device-pixel-ratio: 2), (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 192dpi), (min-width: 1200px) and (min-resolution: 2dppx) {
+@media (min-width: 769px) and (min-device-pixel-ratio: 2), (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 769px) and (min-resolution: 192dpi), (min-width: 769px) and (min-resolution: 2dppx) {
   .section {
     background-size: cover;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-desktop@2x.jpg);
@@ -526,6 +529,7 @@
 
 .images-block {
   margin: 0;
+  padding: 0;
   gap: 30px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -603,11 +607,11 @@
   }
 }
 
-.features {
+.features-portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.features__title {
+.features-portfolio__title {
   position: absolute;
   white-space: nowrap;
   width: 1px;
@@ -620,7 +624,7 @@
           clip-path: inset(50%);
   margin: -1px;
 }
-.features__button {
+.features-portfolio__button {
   padding-left: 0;
   margin-top: 0;
   display: -webkit-box;
@@ -632,10 +636,10 @@
       -ms-flex-pack: center;
           justify-content: center;
 }
-.features__button .item + .item {
+.features-portfolio__button .item + .item {
   margin-left: 8px;
 }
-.features__button .item:hover {
+.features-portfolio__button .item:hover {
   -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1215686275);
           box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1215686275);
   -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.0784313725);
@@ -755,7 +759,6 @@
 }
 .comand__title {
   margin-top: 0;
-  margin-bottom: 50px;
   color: var(--title-color);
   font-weight: 700;
   font-size: 28px;
@@ -763,8 +766,14 @@
   text-align: Center;
   letter-spacing: 0.03em;
 }
+@media (min-width: 480px) {
+  .comand__title {
+    margin-bottom: 30px;
+  }
+}
 @media (min-width: 1200px) {
   .comand__title {
+    margin-bottom: 50px;
     font-size: 36px;
     line-height: 1.16;
   }
@@ -772,6 +781,7 @@
 .comand__list {
   list-style: none;
   padding-left: 0;
+  margin: 0;
   gap: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -912,7 +922,6 @@
   border-color: var(--accent-color);
 }
 .client__section {
-  margin-top: 50px;
   margin-bottom: 0;
   padding-left: 0;
   display: -webkit-box;
@@ -928,6 +937,11 @@
           justify-content: center;
   gap: 30px;
 }
+@media (min-width: 480px) {
+  .client__section {
+    margin-top: 30px;
+  }
+}
 @media (min-width: 768px) {
   .client__section {
     display: -webkit-box;
@@ -936,9 +950,6 @@
   }
 }
 
-.client-box {
-  padding-bottom: 20px;
-}
 .client-box__list {
   list-style: none;
   border: 1px solid var(--second-color);
@@ -1225,6 +1236,9 @@
 .footer-contact__list > li {
   margin-bottom: 12px;
 }
+.footer-contact__list > li:last-child {
+  margin-bottom: 0;
+}
 .footer-contact__item :nth-last-child(1) {
   margin-bottom: 0;
 }
@@ -1263,6 +1277,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media (min-width: 480px) {
+  .footer-socials {
+    margin-top: 60px;
+  }
 }
 @media (min-width: 1200px) {
   .footer-socials {
