--- a/sass/components/_client-company.scss
+++ b/sass/components/_client-company.scss
@@ -28,7 +28,7 @@
   }
 
   &__section {
-    margin-top: 50px;
+    // margin-top: 50px;
     margin-bottom: 0;
     padding-left: 0;
     display: flex;
@@ -36,6 +36,10 @@
     align-items: center;
     justify-content: center;
     gap: 30px;
+
+    @media (min-width:480px){
+      margin-top: 30px;
+    }
 
     @media(min-width: 768px){
       display: flex;
@@ -45,8 +49,6 @@
 
 
 .client-box {
-  padding-bottom: 20px;
-
   &__list {
     list-style: none;
     border: 1px solid var(--second-color);
