--- a/sass/components/_comand.scss
+++ b/sass/components/_comand.scss
@@ -10,7 +10,6 @@
 
   &__title {
     margin-top: 0;
-    margin-bottom: 50px;
     color: var(--title-color);
     font-weight: 700;
     font-size: 28px;
@@ -18,7 +17,12 @@
     text-align: Center;
     letter-spacing: 0.03em;
 
+    @media(min-width:480px){
+      margin-bottom: 30px;
+    }
+
     @media (min-width: 1200px){
+    margin-bottom: 50px;
     font-size: 36px;
     line-height: 1.16;
     }
@@ -27,6 +31,7 @@
   &__list {
     list-style: none;
     padding-left: 0;
+    margin: 0;
     gap: 20px;
     display: flex;
     flex-wrap: wrap;
