--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -3,6 +3,7 @@
   padding-bottom: 60px;
   background-color: var(--white-color);
 
+
   @media (min-width:1200px){
     padding-top: 94px;
     padding-bottom: 94px;
@@ -24,6 +25,7 @@
 
 .images-block {
   margin: 0;
+  padding: 0;
   gap: 30px;
   flex-wrap: wrap;
   list-style: none;
