--- a/sass/components/_footer-socials.scss
+++ b/sass/components/_footer-socials.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
 
+  @media (min-width:480px) {
+    margin-top: 60px;
+  }
+
   @media (min-width:1200px){
     align-items: flex-start;
     margin-right: 94px;
