--- a/sass/components/_footer-input.scss
+++ b/sass/components/_footer-input.scss
@@ -7,6 +7,7 @@
   @media (min-width:1200px){
     display: inline-flex;
     align-items: flex-start;
+    margin-top: 0;
   }
 }
 
@@ -43,6 +44,7 @@
     @media (min-width:1200px){
       min-width: 358px;
       margin-right: 12px;
+      margin-bottom: 0;
     }
 
     &:hover,
