--- a/sass/components/_footer-socials.scss
+++ b/sass/components/_footer-socials.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 60px;
 
   @media (min-width:480px) {
     margin-top: 60px;
@@ -10,6 +11,7 @@
   @media (min-width:1200px){
     align-items: flex-start;
     margin-right: 94px;
+    margin-top: 0;
   }
 }
 
