--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,16 +1,18 @@
 .section {
   background-color: var(--background-color-black);
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  // padding-top: 200px;
+  // padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px;
+  // background-size: 1600px;
   background-size:cover;
   background-image: linear-gradient(to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)),
-    url(../images/bg-image.jpg);
+      url(../images/hero-mobile.jpg);
 
   @media (min-width: 480px) {
     // max-width: 480px;
@@ -57,6 +59,7 @@
 
   @media (min-width: 769px) {
     background-size:cover;
+    background-size: 1600px;
     // max-width: 1600px;
     // height: 600px;
     background-image: linear-gradient(to right,
@@ -81,7 +84,7 @@
     margin-right: auto;
     margin-top: 0;
     margin-bottom: 30px;
-    max-width: 696px;
+    // max-width: 696px;
     text-align: center;
     color: var(--white-color);
     font-family: Roboto, sans-serif;
