--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -28,7 +28,7 @@
 
   &__title {
     color: var(--title-color);
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 700;
     font-family: Roboto;
     line-height: 1.15;
@@ -36,6 +36,10 @@
     letter-spacing: 0 0.03;
     margin-top: 0;
     margin-bottom: 12px;
+
+    @media (min-width:480px){
+      font-size: 20px;
+    }
   }
 
   &__button-close {
