--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -86,7 +86,7 @@
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-    text-align:justify;
+    text-align:left;
 
     @media (min-width:768px){
       margin-right: 0;
