--- a/css/main.css
+++ b/css/main.css
@@ -406,6 +406,7 @@
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  padding-bottom: 48px;
 }
 .menu-socials__link {
   color: var(--accent-color);
@@ -462,15 +463,17 @@
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-tablet@2x.jpg);
   }
 }
-@media (min-width: 769px) {
+@media (min-width: 1200px) {
   .section {
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-size: cover;
     background-size: 1600px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-desktop.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-desktop.jpg);
   }
 }
-@media (min-width: 769px) and (min-device-pixel-ratio: 2), (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 769px) and (min-resolution: 192dpi), (min-width: 769px) and (min-resolution: 2dppx) {
+@media (min-width: 1200px) and (min-device-pixel-ratio: 2), (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 192dpi), (min-width: 1200px) and (min-resolution: 2dppx) {
   .section {
     background-size: cover;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-desktop@2x.jpg);
@@ -482,6 +485,7 @@
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 30px;
+  max-width: 360px;
   text-align: center;
   color: var(--white-color);
   font-family: Roboto, sans-serif;
@@ -495,6 +499,7 @@
   .section__headline {
     font-size: 44px;
     line-height: 1.36;
+    max-width: 696px;
   }
 }
 .section__button-active {
@@ -615,7 +620,7 @@
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  text-align: justify;
+  text-align: left;
 }
 @media (min-width: 768px) {
   .images-block__text {
