--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -104,6 +104,7 @@
   margin-bottom: 0;
   list-style: none;
   display: inline-flex;
+  padding-bottom: 48px;
 
   &__link{
     color: var(--accent-color);
