--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,12 +4,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
+
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: none;
   border-radius: 4px;
   position: relative;
   width:280px;
-  height:609px;
+  height: min(100%, 609px);
   background-color: rgba(255, 255, 255, 1);
   padding: 40px;
   overflow-y: auto;
